--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -35,11 +35,13 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -150%);
+  transition: 1s;
   pointer-events: none;
   opacity: 0%;
   text-align: center;
 }
+
 .popup-modal p {
   margin-bottom: 24px
 }
@@ -53,11 +55,13 @@ button {
 }
 
 .popup-modal.show {
+  transition: 1s;
+  transform: translate(-50%,-50%);
   opacity: 100%;
   pointer-events: all;
 }
 
 .backdrop.show {
-  opacity: 30%;
+  transition: 1s;
+  opacity: 20%;
 }
-
