--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -8,7 +8,7 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 2px 5px;
 }
 
 ul {
@@ -22,4 +22,19 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  display: flex;
+  margin: 25px;
+  gap: 10px;
+
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transform: scale(100%,60%);
 }
