--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -27,6 +27,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  transform: translate(10px);
 }
 
 button {
@@ -45,4 +46,18 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 0;
+}
+
+.s1 , .s2 {
+  display: flex;
 }
