--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,15 @@ body {
 img {
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.alltext {
+  display: flex;
+  text-align: center;
+  max-width: 55%;
+  transform: translate(300px,30px);
+}
+
+.imagess{
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 60%;
+  transform: translate(270px,20px);
+
 }
