--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -17,7 +17,7 @@ body {
 
 .modal {
   background: white;
-  width: 480px;
+  width: 500px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
@@ -63,4 +63,30 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.firstheader {
+  display: flex;
+  transform: translate(10px,10px);
+}
+
+.header {
+  font-weight: bold;
+  font-size: 24px;
+  transform: translate(5px,10px);
+}
+
+.text {
+  text-align: center;
+  max-width: 75%;
+  transform: translate(60px,-20px);
+  padding: 4%;
+}
+
+.close-button {
+  transform: translate(460px,-25px);
+}
+
+.c-c {
+  transform: translate(50px,-20px);
 }
