--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,45 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+body {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header{
+  position: fixed;
+  top: 0;
+  left: -10px;
+  right: 0;
+  height: 52px;
+  display: flex;
+  gap: 1150px;
+}
+.footer{
+  position: fixed;
+  bottom: 0;
+  left: -10px;
+  right: 0;
+  height: 52px;
+  display: flex;
+  gap: 1100px;
+  background-color: lightgray;
+}
+
+.right-links, .left-links{
+  list-style-type: none;
+  display: flex;
+  gap: 5px;
+}
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
