--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  position: fixed;
+  bottom: 0%;
+  padding-inline: 45%;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  padding-bottom: 40%;
+  transform: translate(0px,-20px);
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 10%;
+
+}
+
+.groupflex {
+  display: flex;
+  gap: 90px;
+}
+
+.none-x {
+   list-style-type: none;
+   display: grid;
+   gap: 10px;
+}
+
+.grouptext {
+  display: grid;
+  grid-template-columns: 0.3fr 0.3fr .3fr;
+  grid-auto-rows: 250px;
+  row-gap: 50px;
+  column-gap: 50px;
 }
