--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4 fr;
+  gap: 4px;
 }
 
 .container div {
@@ -16,16 +19,24 @@
 }
 
 .header {
-  background-color: #393f4d;
+  background-color: #9b9faa;
+  display: grid;
+  grid-column: 1/5;
 }
 
 .logo {
+  grid-column: 1 / 2;
+  justify-self: start;
 }
 
 .menu {
+  grid-column: 2/5;
 }
 
 .menu ul {
+  list-style-type: none;
+  column-count: 4;
+  column-gap: 20px;
 }
 
 .menu ul,
@@ -35,6 +46,12 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1/2;
+  grid-row: 2/5;
+  display: grid;
+  gap: 50px;
+  align-content: center;
+  grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
 }
 
 .sidebar .photo {
@@ -43,9 +60,6 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
-}
-
-.photo  {
 }
 
 .sidebar .side-content {
@@ -57,9 +71,15 @@
 
 .nav {
   background-color: #FF7755;
+  grid-column: 2 / 5;
+  grid-row: 2/ 3;
 }
 
 .nav ul {
+  column-count: 3;
+  column-gap: 20px;
+  list-style-type: none;
+  
 }
 
 .nav ul li {
@@ -69,6 +89,12 @@
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 5;
+  grid-row: 3 / 5;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(2, 1fr);
+  gap: 15px;
 }
 
 .article p {
@@ -82,6 +108,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -97,6 +124,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/5;
+  grid-row: 5;
 }
 
 .footer p {
